base/kong/kong-ingress-dbless-proxy-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: ingress-kong-proxy
  name: ingress-kong-proxy
  namespace: kong
spec:
  selector:
    matchLabels:
      app: ingress-kong-proxy
  template:
    metadata:
      annotations:
        prometheus.io/port: "8100"
        prometheus.io/scrape: "true"
        traffic.sidecar.istio.io/includeInboundPorts: ""
        kuma.io/gateway: enabled
      labels:
        app: ingress-kong-proxy
    spec:
      hostNetwork: true
      serviceAccountName: kong-serviceaccount
      containers:
      - name: proxy
        image: kong:2.0.4-alpine
        securityContext:
          runAsUser: 1000
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sh", "-c", "kong quit" ]
        ports:
        - name: proxy
          containerPort: 80
          protocol: TCP
        - name: proxy-ssl
          containerPort: 443
          protocol: TCP
        - name: metrics
          containerPort: 8100
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /status
            port: 8100
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
