base/kong/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kong
  name: ingress-kong
spec:
  template:
    spec:
      serviceAccountName: kong-serviceaccount
      containers:
      - name: proxy
